# deer-flow

./: .env.example  .gitignore  README.md  config.example.yaml
backend/: CLAUDE.md  debug.py  pyproject.toml
backend/app/channels/: manager.py  service.py
backend/app/gateway/: app.py  config.py  csrf_middleware.py  services.py
backend/app/gateway/routers/: skills.py
backend/tests/: test_aio_sandbox_local_backend.py  test_channels.py  test_create_deerflow_agent.py  test_credential_loader.py  test_csrf_middleware.py  test_gateway_services.py  test_lead_agent_model_resolution.py  test_lead_agent_prompt.py  test_lead_agent_skills.py  test_llm_error_handling_middleware.py  test_local_sandbox_provider_mounts.py  test_loop_detection_config.py  test_loop_detection_middleware.py  test_memory_updater.py  test_run_worker_rollback.py  test_runtime_paths.py  test_skills_custom_router.py  test_skills_parser.py  test_skills_validation.py  test_subagent_executor.py  test_threads_router.py  test_title_middleware_core_logic.py  test_uploads_router.py
frontend/: .env.example
frontend/src/app/: page.tsx
frontend/src/components/workspace/: input-box.tsx  workspace-header.tsx
frontend/src/components/workspace/messages/: message-group.tsx
frontend/src/core/auth/: gateway-config.ts
frontend/src/core/i18n/locales/: en-US.ts  types.ts  zh-CN.ts
frontend/src/core/settings/: local.ts
frontend/src/core/threads/: hooks.ts
frontend/tests/e2e/: chat-thread-init-ordering.spec.ts
frontend/tests/unit/core/auth/: gateway-config.test.ts
(+3 files in other folders)
